feat: Implement Phase 2 - Security Integration (Issue #10)
Phase 2: Security Integration (Weeks 3-4)
==========================================

API Key Management Enhancements:
- Enhanced ApiKeyService with role validation against VALID_ROLES set
- Added role management: updateApiKeyRoles(), deleteApiKey(), reactivateApiKey()
- Added statistics: getApiKeyStatistics(), listAllApiKeys()
- Added description field support for API keys
- Implemented cache eviction annotations for API key operations

Security Audit Logging:
- Created SecurityAuditEvent record for immutable audit events
- Created SecurityAuditService with comprehensive audit logging
- Audit event types: AUTHENTICATION, AUTHORIZATION, API_KEY_MANAGEMENT
- Event storage: In-memory ConcurrentLinkedQueue (max 10,000 events)
- Query methods: getRecentEvents(), getEventsByPrincipal(), getFailedAuthAttempts()

Security Management Endpoints:
- Enhanced SecurityController with audit integration
- New endpoints:
  * GET /security/api-keys/stats - API key statistics
  * PUT /security/api-keys/{id}/roles - Update API key roles
  * GET /security/audit - Recent audit events
  * GET /security/audit/failed-auth - Failed authentication attempts
- Converted to reactive ServerHttpRequest for IP address extraction
- Integrated SecurityAuditService for all security operations

DTOs:
- ApiKeyRequest: Validated request DTO for API key generation
- ApiKeyResponse: Response DTO with security-aware factory methods
- SecurityAuditEvent: Audit event record with builder pattern

Testing:
- Created ApiKeyServiceTest: 13 unit tests covering all API key operations
- Created SecurityAuditServiceTest: 9 unit tests covering audit logging
- All 22 tests passing
- Validates role management, statistics, concurrent operations
- Validates audit logging, event filtering, failed auth tracking

Technical Details:
- Reactive architecture preserved (ServerHttpRequest, Mono/Flux)
- Role validation: MCP_CLIENT, ADMIN, PUBLIC
- Secure API key generatio